--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     </head>
     <body>
         <h1>hola mundo</h1>
+        <table>
+            <tr>
+                <td>fila 1, c1</td>
+                <td>fila 1, c2</td>
+            </tr>
+            <tr>
+                <td>fila 2, c1</td>
+                <td>fila 2, c2</td>
+            </tr>
+        </table>
     </body>
 </html>
